alpm-types/src/version/snapshots/buildtool::invalid_buildtoolver_new@case_1_minimal_version_with_architecture.snap
---
source: alpm-types/src/version/buildtool.rs
---
Parser failed with the following error:
1.0.0
^
expected alpm-pkgver string, followed by a '-' and an alpm-pkgrel string
