alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_05_dot.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid full alpm-package-version
 | 
 | .
 | ~^ expected the '-' delimiter that divides the alpm-pkgver and alpm-pkgrel
