alpm-types/src/version/snapshots/pkg_generic::parse_error_in_version_from_string@case_4_no_version.snap
---
source: alpm-types/src/version/pkg_generic.rs
---
:
^
invalid package epoch
expected non-negative decimal integer, followed by a ':'
