alpm-types/src/version/snapshots/pkg_generic::parse_error_in_version_from_string@case_5_invalid_integer.snap
---
source: alpm-types/src/version/pkg_generic.rs
---
error: invalid character
 | 
 | -1foo:1
 | ^ expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
 | 
 = while parsing:
   alpm-package-version: (-1foo:1)
   └ alpm-pkgver: (-1foo:1)
     → invalid character
     → expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
