alpm-types/src/version/snapshots/pkg_minimal::minimal_version_from_str_parse_error@case_02_two_epoch.snap
---
source: alpm-types/src/version/pkg_minimal.rs
---
error: invalid minimal alpm-package-version
 | 
 | 1:1:foo-1
 |    ^
 | 
 = while parsing:
   minimal alpm-package-version: (:foo-1)
   → The package version must end after the alpm-pkgver
